# StarNavi

./: Dockerfile  Makefile  README.md  docker-compose.yml  logger.py  pyproject.toml
post_manager/: manage.py
post_manager/analytics/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
post_manager/analytics/migrations/: 0001_initial.py
post_manager/comments/: models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
post_manager/comments/migrations/: 0001_initial.py  0002_alter_comment_created_at.py
post_manager/post_manager/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
post_manager/posts/: models.py  serializers.py  tests.py  views.py
post_manager/posts/migrations/: 0001_initial.py  0002_post_is_blocked.py  0003_autoreply.py  0004_remove_autoreply_reply_content_template.py
